# freshcart

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  hello.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: docker-publish.yml  docker-tests.yml  lint.yml  tests.yml
examples/: demo_discounts.py  demo_inventory.py
src/freshcart/: __init__.py  demo.py
src/freshcart.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/freshcart/api/: __init__.py  main.py  schemas.py
src/freshcart/api/routers/: __init__.py  health.py  inventory.py  products.py
src/freshcart/domain/: inventory.py  products.py
tests/: test_ai_products.py  test_api_health.py  test_api_inventory.py  test_inventory.py  test_products.py
